# SISTEMA_VENTAS

./: .gitignore  CMakeLists.txt  login_window.cpp  login_window.h  main.cpp
.github/workflows/: build-windows.yml
